--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
             <version>4.0.4</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-databind</artifactId>
+           <version>2.18.3</version>
+            <type>jar</type>
+        </dependency>
+
     </dependencies>
     
     <build>
