--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
            <version>2.18.3</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+             <groupId>com.google.code.gson</groupId>
+           <artifactId>gson</artifactId>
+           <version>2.10.1</version> 
+        </dependency>
 
     </dependencies>
     
