--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>4.0.4</version>
-            <scope>provided</scope>
+            <type>jar</type>
         </dependency>
         
         <dependency>
